--- a/sites_apache2.conf
+++ b/sites_apache2.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost *:80 [2600:1f14:3d86:2c00:8d40:b325:c577:444f]:80>
 ServerName sites.lam1.us
 ServerAlias sites.lamurakami.com sites.lam-ak.com sites.localhost sites.laptop
 ServerAdmin Sites.ServerAdmin@LAMurakami.com
