--- a/sites_apache2.conf
+++ b/sites_apache2.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80 [2600:1f14:3d86:2c00:8d40:b325:c577:444f]:80>
 ServerName sites.lam1.us
-ServerAlias sites.lamurakami.com sites.lam-ak.com sites.localhost sites.laptop
+ServerAlias sites.lamurakami.com sites.larrymurakami.com sites.larryforalaska.com
 ServerAdmin Sites.ServerAdmin@LAMurakami.com
 DocumentRoot "/var/www/sites/html"
 ErrorDocument 404 /Public/Scripts/Error-404.cgi-pl
