--- a/sites_apache2.conf
+++ b/sites_apache2.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80 [2600:1f14:3d86:2c00:6d2d:dcef:7a82:b512]:80>
+<VirtualHost *:80>
 ServerName sites.lam1.us
 ServerAlias sites.lamurakami.com sites.larrymurakami.com sites.larryforalaska.com
 ServerAdmin Sites.ServerAdmin@LAMurakami.com
