Use "logs/" prefix instead of absolute path
The "logs/" prefix leads to a symbolic link
 in the apache2 configuration directory.
This symbolic link is part of the default configuration for apache2
 on the latest Fedora instances as well as Amazon Linux and other
 Operating Systems.
Debian, Ubuntu and other derivative OSs use an APACHE_LOG_DIR environment
 variable that is not available in the default Fedora apache2 configuration.

Create the link on a Debian or Ubuntu system with:

sudo ln -s /var/log/apache2 /etc/apache2/logs

On a Fedora system the logs symbolic link is in /etc/httpd
 and points to /var/log/httpd

--- a/sites_apache2.conf
+++ b/sites_apache2.conf
@@ -5,10 +5,10 @@ ServerAdmin Sites.ServerAdmin@LAMurakami.com
 DocumentRoot "/var/www/sites/html"
 ErrorDocument 404 /Public/Scripts/Error-404.cgi-pl
 
-ErrorLog /var/log/apache2/sites_error.log
+ErrorLog logs/sites_error.log
 
 <IfModule mod_log_config.c>
-     TransferLog /var/log/apache2/sites_access.log
+     TransferLog logs/sites_access.log
 </IfModule>
 
 RewriteEngine on
