Add some ServerAlias entries
Make sites the default site for the lam1.us and lamurakami.com base names.

--- a/sites_ssl_lamurakami-apache2.conf
+++ b/sites_ssl_lamurakami-apache2.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:443>
 ServerName sites.lamurakami.com
+ServerAlias lamurakami.com
 ServerAdmin Sites.ServerAdmin@LAMurakami.com
 DocumentRoot "/var/www/sites/html"
 ErrorDocument 404 /Public/Scripts/Error-404.cgi-pl
