--- a/sites_ssl_lam1-apache2.conf
+++ b/sites_ssl_lam1-apache2.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:443>
 ServerName sites.lam1.us
-ServerAlias lam1.us www.lam1.us
+ServerAlias sites.lamurakami.com sites.larryforalaska.com sites.larrymurakami.com lam1.us lamurakami.com larrymurakami.com www.lam1.us
 ServerAdmin Sites.ServerAdmin@LAMurakami.com
 DocumentRoot "/var/www/sites/html"
 ErrorDocument 404 /Public/Scripts/Error-404.cgi-pl
